fix : navbar desarrollador software align with the other items

--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,7 @@ nav ul li h2 {
     font-size: 1vw;
     color: #fff;
     position: relative;
-    padding: 1vw 3vw 2vw 1vw;
+    padding: 1vw 3vw 2vw 0.5vw;
     margin: 0px;
 }
 
